# flask_api

./: .coveragerc  .env.example  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  .versionrc  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  config.py  config.sh  docker-compose.yaml  flask_api.logrotate  manage.py  package-lock.json  package.json  pyproject.toml  req.txt  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  server.py  uwsgi.ini  uwsgi.ini.example
src/: .coveragerc  .pylintrc  Makefile  config.py  manage.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  ruff.toml
src/app/: __init__.py  containers.py  di_container.py  exceptions.py  extensions.py  logging.py  middleware.py
src/app/blueprints/: __init__.py  auth.py  base.py  documents.py  roles.py  tasks.py  users.py
src/app/celery/: __init__.py  celery.py  tasks.py
src/app/cli/: __init__.py  _base_cli.py  base_cli.py  cli_register.py  create_db_cli.py  seeder_cli.py
src/app/database/: __init__.py
src/app/decorators/: handle_gdrive_errors.py
src/app/file_storages/: __init__.py  base.py  local.py
src/app/helpers/: __init__.py  custom_api.py  libreoffice.py  module_helper.py  otp_token.py  request_helpers.py  request_query_operator.py  sqlalchemy_query_builder.py
src/app/managers/: __init__.py  base.py  document.py  role.py  user.py
src/app/models/: __init__.py  base.py  document.py  role.py  user.py
src/app/services/: auth.py  (+6 more)
src/migrations/: env.py
src/storage/: .gitignore
src/tests/: __init__.py  conftest.py  custom_flask_client.py  test_mail.py  test_middleware.py
(+362 files in other folders)
